Fix label.users and rename users.jsp to user.jsp

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -8,7 +8,7 @@ label.menu=Menu
 label.title=User Manager
 label.footer=&copy; Dmitry Krivenko
 
-label.contacts=Users
+label.users=Users
 label.delete=Delete
 
 label.logout=Logout
